# truthlie

./: README.md
backend/: Cargo.toml
backend/src/: config.rs  lib.rs  main.rs  routes.rs  state.rs
backend/src/error/: mod.rs
backend/src/handlers/: game.rs  mod.rs  player.rs  ws.rs
backend/src/models/: game.rs  player.rs
backend/src/services/: game_manager.rs
backend/src/utils/: mod.rs
backend/src/ws/: mod.rs  player_ws.rs
backend/tests/: player_routes.rs
frontend/: package-lock.json  package.json  test.ts
